Attempt to fix issues on mobile devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2477,13 +2477,14 @@ input, select, textarea {
 			margin: 0 0 1rem 1.5rem;
 			top: 0.25rem;
 		}
-		/* Erase if needed */
+		/* Erase if needed added content*/
 
 		@media (max-width: 768px) {
 			.image.right {
 				float: none; /* Remove float to center the image */
 				margin: 0 auto; /* Center the image horizontally */
 				display: block; /* Ensure the image is displayed as a block element */
+				object-fit: contain
 			}
 		}
 
